--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="https://www.google.com" target="_blank">
+                    <a href="https://github.com/ImP4x/Portafolioweb" target="_blank">
                         <img src="image/git.png" class="nav-icon">
                     </a>
                 </li>
